@@ -79,10 +79,10 @@ import org.egov.model.payment.Paymentheader;
 import org.egov.utils.Constants;
 import org.egov.utils.FinancialConstants;
 import org.hibernate.HibernateException;
-import org.hibernate.query.Query;
+import org.hibernate.Query;
 import org.hibernate.transform.Transformers;
-import org.hibernate.type.StandardBasicTypes;
-import org.hibernate.type.StandardBasicTypes;
+import org.hibernate.type.BigDecimalType;
+import org.hibernate.type.LongType;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 
@@ -150,7 +150,8 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 		finalChequeAssignmentList.addAll(getExpenseBillPayments());
 		finalChequeAssignmentList.addAll(getDirectBankPaymentsForChequeAssignment());
 		finalChequeAssignmentList.addAll(getContractorSupplierPaymentsForChequeAssignment(parameters));
-		LOGGER.info("getPaymentVoucherNotInInstrument: total results=" + finalChequeAssignmentList.size());
+		if (LOGGER.isDebugEnabled())
+			LOGGER.debug("Completed getPaymentVoucherNotInInstrument.");
 		return finalChequeAssignmentList;
 	}
 
@@ -164,7 +165,8 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 		getExpenseBillPaymentsWithSurrenderedCheques();
 		if (tempExpenseChequeAssignmentList != null && tempExpenseChequeAssignmentList.size() != 0)
 			prepareChequeList();
-		LOGGER.info("getExpenseBillPayments: tempExpense count=" + (tempExpenseChequeAssignmentList == null ? 0 : tempExpenseChequeAssignmentList.size()) + ", finalCBill count=" + (finalCBillChequeAssignmentList == null ? 0 : finalCBillChequeAssignmentList.size()));
+		if (LOGGER.isDebugEnabled())
+			LOGGER.debug("Completed getExpenseBillPayments.");
 		return finalCBillChequeAssignmentList;
 	}
 
@@ -180,7 +182,7 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 		final Map<String, Object> filterParams = queryWithParams.getValue();
 		setStatusValues();
 
-		query = getSession().createNativeQuery(
+		query = getSession().createSQLQuery(
 				new StringBuilder("select vh.id as voucherid ,vh.voucherNumber as voucherNumber ,").append(
 						"vh.voucherDate as voucherDate,sum(misbill.paidamount) as paidAmount,current_date as chequeDate")
 						.append(" from Paymentheader ph,voucherheader vh,vouchermis vmis, Miscbilldetail misbill ")
@@ -191,8 +193,8 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 						.append(" and vh.type = :voucherType and vh.name NOT IN (:voucherName) ")
 						.append(" group by vh.id,vh.voucherNumber,vh.voucherDate order by vh.voucherNumber ")
 						.toString())
-				.addScalar("voucherid", StandardBasicTypes.LONG).addScalar("voucherNumber").addScalar("voucherDate")
-				.addScalar("paidAmount", StandardBasicTypes.BIG_DECIMAL).addScalar("chequeDate")
+				.addScalar("voucherid", LongType.INSTANCE).addScalar("voucherNumber").addScalar("voucherDate")
+				.addScalar("paidAmount", BigDecimalType.INSTANCE).addScalar("chequeDate")
 				.setResultTransformer(Transformers.aliasToBean(ChequeAssignment.class));
 		query.setParameter("status", Integer.valueOf(approvedstatus))
 				.setParameterList("statusId", financialUtils.getStatuses(statusId))
@@ -281,10 +283,10 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 		params.put("glcodeId", ba.getChartofaccounts().getId());
 		params.put("statusId", financialUtils.getStatuses(statusId));
 
-		query = getSession().createNativeQuery(supplierBillPaymentQuery.toString())
-				.addScalar("voucherid", StandardBasicTypes.LONG).addScalar("voucherNumber").addScalar("voucherDate")
-				.addScalar("detailtypeid", StandardBasicTypes.LONG).addScalar("detailkeyid", StandardBasicTypes.LONG)
-				.addScalar("paidTo").addScalar("paidAmount", StandardBasicTypes.BIG_DECIMAL).addScalar("chequeDate")
+		query = getSession().createSQLQuery(supplierBillPaymentQuery.toString())
+				.addScalar("voucherid", LongType.INSTANCE).addScalar("voucherNumber").addScalar("voucherDate")
+				.addScalar("detailtypeid", LongType.INSTANCE).addScalar("detailkeyid", LongType.INSTANCE)
+				.addScalar("paidTo").addScalar("paidAmount", BigDecimalType.INSTANCE).addScalar("chequeDate")
 				.setResultTransformer(Transformers.aliasToBean(ChequeAssignment.class));
 	
 		persistenceService.populateQueryWithParams(query, params);
@@ -347,10 +349,10 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 		params.putAll(filterParams);
 		params.put("statusId", financialUtils.getStatuses(statusId));
 
-		query = getSession().createNativeQuery(bankPaymentQuery.toString()).addScalar("voucherid", StandardBasicTypes.LONG)
-				.addScalar("voucherNumber").addScalar("detailtypeid", StandardBasicTypes.LONG)
-				.addScalar("detailkeyid", StandardBasicTypes.LONG).addScalar("voucherDate").addScalar("paidTo")
-				.addScalar("paidAmount", StandardBasicTypes.BIG_DECIMAL).addScalar("chequeDate")
+		query = getSession().createSQLQuery(bankPaymentQuery.toString()).addScalar("voucherid", LongType.INSTANCE)
+				.addScalar("voucherNumber").addScalar("detailtypeid", LongType.INSTANCE)
+				.addScalar("detailkeyid", LongType.INSTANCE).addScalar("voucherDate").addScalar("paidTo")
+				.addScalar("paidAmount", BigDecimalType.INSTANCE).addScalar("chequeDate")
 				.setResultTransformer(Transformers.aliasToBean(ChequeAssignment.class));
 
 		persistenceService.populateQueryWithParams(query, params);
@@ -399,10 +401,10 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 		params.putAll(filterParams);
 		params.put("expendituretype", FinancialConstants.STANDARD_EXPENDITURETYPE_CONTINGENT);
 
-		query = getSession().createNativeQuery(strQuery.toString()).addScalar("voucherid", StandardBasicTypes.LONG)
-				.addScalar("voucherNumber").addScalar("voucherDate").addScalar("paidAmount", StandardBasicTypes.BIG_DECIMAL)
-				.addScalar("chequeDate").addScalar("paidTo").addScalar("billVHId", StandardBasicTypes.LONG)
-				.addScalar("detailtypeid", StandardBasicTypes.LONG).addScalar("detailkeyid", StandardBasicTypes.LONG)
+		query = getSession().createSQLQuery(strQuery.toString()).addScalar("voucherid", LongType.INSTANCE)
+				.addScalar("voucherNumber").addScalar("voucherDate").addScalar("paidAmount", BigDecimalType.INSTANCE)
+				.addScalar("chequeDate").addScalar("paidTo").addScalar("billVHId", LongType.INSTANCE)
+				.addScalar("detailtypeid", LongType.INSTANCE).addScalar("detailkeyid", LongType.INSTANCE)
 				.setResultTransformer(Transformers.aliasToBean(ChequeAssignment.class));
 
 		params.entrySet().forEach(entry -> query.setParameter(entry.getKey(), entry.getValue()));
@@ -410,7 +412,6 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 		if (LOGGER.isDebugEnabled())
 			LOGGER.debug("NOT YET ASSIGNED No cheques - " + strQuery);
 		billChequeAssignmentList = query.list();
-		LOGGER.info("getExpenseBillPaymentsHavingNoCheques: query returned " + (billChequeAssignmentList == null ? 0 : billChequeAssignmentList.size()) + " rows. FilterParams=" + params);
 
 		for (final ChequeAssignment ca : billChequeAssignmentList)
 			billVHIds.add(ca.getBillVHId().longValue());
@@ -541,7 +542,7 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 	}
 
 	private BigDecimal getNonSubledgerDeductions(final Long billVHId) {
-		final Query query = getSession().createNativeQuery(new StringBuilder("SELECT SUM(gl.creditamount) ")
+		final Query query = getSession().createSQLQuery(new StringBuilder("SELECT SUM(gl.creditamount) ")
 				.append("FROM generalledger gl WHERE gl.creditamount>0 ")
 				.append("AND gl.glcodeid NOT IN (:glcodeIdList) AND voucherheaderid  = :billVHId")
 				.append(" AND gl.glcodeid NOT IN (SELECT glcodeid FROM chartofaccountdetail) order by gl.glcode")
@@ -595,10 +596,10 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 		params.put("expendituretype", FinancialConstants.STANDARD_EXPENDITURETYPE_CONTINGENT);
 		params.put("ihStaus", financialUtils.getStatuses(statusId));
 
-		final Query query = getSession().createNativeQuery(strQuery.toString()).addScalar("voucherid", StandardBasicTypes.LONG)
-				.addScalar("voucherNumber").addScalar("voucherDate").addScalar("paidAmount", StandardBasicTypes.BIG_DECIMAL)
-				.addScalar("chequeDate").addScalar("paidTo").addScalar("billVHId", StandardBasicTypes.LONG)
-				.addScalar("detailtypeid", StandardBasicTypes.LONG).addScalar("detailkeyid", StandardBasicTypes.LONG)
+		final Query query = getSession().createSQLQuery(strQuery.toString()).addScalar("voucherid", LongType.INSTANCE)
+				.addScalar("voucherNumber").addScalar("voucherDate").addScalar("paidAmount", BigDecimalType.INSTANCE)
+				.addScalar("chequeDate").addScalar("paidTo").addScalar("billVHId", LongType.INSTANCE)
+				.addScalar("detailtypeid", LongType.INSTANCE).addScalar("detailkeyid", LongType.INSTANCE)
 				.setResultTransformer(Transformers.aliasToBean(ChequeAssignment.class));
 		
 		populateQueryWithParams(query, params);
@@ -660,8 +661,8 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 					if (LOGGER.isDebugEnabled())
 						LOGGER.debug("ALREADY ASSIGNED: queryString" + queryString);
 
-					final List<Object> payTo = getSession().createNativeQuery(queryString.toString())
-							.setParameter("payTo", chqAssgn.getPaidTo())
+					final List<Object> payTo = getSession().createSQLQuery(queryString.toString())
+							.setString("payTo", chqAssgn.getPaidTo())
 							.setParameter("voucherHeaderId", chqAssgn.getVoucherid())
 							.setParameterList("statusId", financialUtils.getStatuses(statusId))
 							.list();
@@ -687,7 +688,7 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 										.append(" and ih.id_status in (:statusId)  ");
 						if (LOGGER.isDebugEnabled())
 							LOGGER.debug("queryString" + queryString);
-						List<Object> payTo = getSession().createNativeQuery(queryString.toString())
+						List<Object> payTo = getSession().createSQLQuery(queryString.toString())
 								.setParameter("voucherHeaderId", chqAssgn.getVoucherid())
 								.setParameter("detailTypeId", detailTypeKeyAmtObj[0])
 								.setParameter("detailKeyId", detailTypeKeyAmtObj[1])
@@ -703,8 +704,8 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 									.append(" and ih.payTo=:payTo and ih.id_status in (:statusId)  ");
 							if (LOGGER.isDebugEnabled())
 								LOGGER.debug("ALREADY ASSIGNED: queryString" + queryString);
-							payTo = getSession().createNativeQuery(queryString.toString())
-									.setParameter("payTo", chqAssgn.getPaidTo())
+							payTo = getSession().createSQLQuery(queryString.toString())
+									.setString("payTo", chqAssgn.getPaidTo())
 									.setParameter("voucherHeaderId", chqAssgn.getVoucherid())
 									.setParameterList("statusId", financialUtils.getStatuses(statusId)).list();
 							if (payTo != null)
@@ -744,8 +745,8 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 							.append(" and ih.payTo =:payTo and ih.id_status in (:statusId)  ").toString();
 					if (LOGGER.isDebugEnabled())
 						LOGGER.debug("ALREADY ASSIGNED: queryString" + queryString);
-					final List<Object> payTo = getSession().createNativeQuery(queryString)
-							.setParameter("payTo", chqAssgn.getPaidTo())
+					final List<Object> payTo = getSession().createSQLQuery(queryString)
+							.setString("payTo", chqAssgn.getPaidTo())
 							.setParameter("voucherHeaderId", chqAssgn.getVoucherid())
 							.setParameterList("statusId", financialUtils.getStatuses(statusId)).list();
 					if (payTo == null || payTo.size() == 0) {
@@ -766,7 +767,7 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 								.append(" and ih.id_status in (:statusId)  ");
 						if (LOGGER.isDebugEnabled())
 							LOGGER.debug("ALREADY ASSIGNED: Querying for " + queryString);
-						List<Object> payTo = getSession().createNativeQuery(queryString.toString())
+						List<Object> payTo = getSession().createSQLQuery(queryString.toString())
 								.setParameter("voucherHeaderId", chqAssgn.getVoucherid())
 								.setParameter("detailTypeId", obj[0]).setParameter("detailKeyId", obj[1])
 								.setParameterList("statusId", financialUtils.getStatuses(statusId)).list();
@@ -781,8 +782,8 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 									.append(" and ih.payTo=:payTo and ih.id_status in (:statusId)  ");
 							if (LOGGER.isDebugEnabled())
 								LOGGER.debug("ALREADY ASSIGNED: queryString" + queryString);
-							payTo = getSession().createNativeQuery(queryString.toString())
-									.setParameter("payTo", chqAssgn.getPaidTo())
+							payTo = getSession().createSQLQuery(queryString.toString())
+									.setString("payTo", chqAssgn.getPaidTo())
 									.setParameter("voucherHeaderId", chqAssgn.getVoucherid())
 									.setParameterList("statusId", financialUtils.getStatuses(statusId)).list();
 							if (payTo != null)
@@ -854,10 +855,10 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 		params.put("expendituretype", FinancialConstants.STANDARD_EXPENDITURETYPE_CONTINGENT);
 		params.put("statusId", financialUtils.getStatuses(statusId));
 
-		final Query query = getSession().createNativeQuery(strQuery.toString()).addScalar("voucherid", StandardBasicTypes.LONG)
-				.addScalar("voucherNumber").addScalar("voucherDate").addScalar("paidAmount", StandardBasicTypes.BIG_DECIMAL)
-				.addScalar("chequeDate").addScalar("paidTo").addScalar("billVHId", StandardBasicTypes.LONG)
-				.addScalar("detailtypeid", StandardBasicTypes.LONG).addScalar("detailkeyid", StandardBasicTypes.LONG)
+		final Query query = getSession().createSQLQuery(strQuery.toString()).addScalar("voucherid", LongType.INSTANCE)
+				.addScalar("voucherNumber").addScalar("voucherDate").addScalar("paidAmount", BigDecimalType.INSTANCE)
+				.addScalar("chequeDate").addScalar("paidTo").addScalar("billVHId", LongType.INSTANCE)
+				.addScalar("detailtypeid", LongType.INSTANCE).addScalar("detailkeyid", LongType.INSTANCE)
 				.setResultTransformer(Transformers.aliasToBean(ChequeAssignment.class));
 		
 		persistenceService.populateQueryWithParams(query, params);
@@ -914,8 +915,8 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 							.append(" and ih.payTo=:payTo order by id desc   ");
 					if (LOGGER.isDebugEnabled())
 						LOGGER.debug("instrumentStatus- " + queryString);
-					final List<Object[]> instrumentStatus = getSession().createNativeQuery(queryString.toString())
-							.setParameter("payTo", chqAssgn.getPaidTo())
+					final List<Object[]> instrumentStatus = getSession().createSQLQuery(queryString.toString())
+							.setString("payTo", chqAssgn.getPaidTo())
 							.setParameter("voucherheaderid", chqAssgn.getVoucherid()).list();
 					if (instrumentStatus == null || instrumentStatus.size() == 0
 							|| !instrumentStatus.get(0)[1].toString().equalsIgnoreCase(instrumentNewStatus)
@@ -939,7 +940,7 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 								.append(" and ih.detailkeyid = :detailkeyid").append(" order by id desc ");
 						if (LOGGER.isDebugEnabled())
 							LOGGER.debug("ASSIGNED BUT SURRENDARD: Inside detailTypeKeyAmtList loop- " + queryString);
-						final List<Object[]> instrumentStatus = getSession().createNativeQuery(queryString.toString())
+						final List<Object[]> instrumentStatus = getSession().createSQLQuery(queryString.toString())
 								.setParameter("voucherheaderid", chqAssgn.getVoucherid())
 								.setParameter("detailtypeid", detailTypeKeyAmtObj[0])
 								.setParameter("detailkeyid", detailTypeKeyAmtObj[1]).list();
@@ -979,9 +980,9 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 							.append(" and ih.payTo=:payTo order by id desc   ");
 					if (LOGGER.isDebugEnabled())
 						LOGGER.debug("ASSIGNED BUT SURRENDARD: getDetailTypeKeyAmtForDebtitSideCC " + queryString);
-					final List<Object[]> instrumentStatus = getSession().createNativeQuery(queryString.toString())
+					final List<Object[]> instrumentStatus = getSession().createSQLQuery(queryString.toString())
 							.setParameter("voucherheaderid", chqAssgn.getVoucherid())
-							.setParameter("payTo", chqAssgn.getPaidTo()).list();
+							.setString("payTo", chqAssgn.getPaidTo()).list();
 
 					if (instrumentStatus == null || instrumentStatus.size() == 0
 							|| !instrumentStatus.get(0)[1].toString().equalsIgnoreCase(instrumentNewStatus)
@@ -1000,9 +1001,9 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 							.append(" and ih.payTo=:payTo order by id desc   ");
 					if (LOGGER.isDebugEnabled())
 						LOGGER.debug("ASSIGNED BUT SURRENDARD: detailTypeKeyAmtList size=1" + queryString);
-					final List<Object[]> instrumentStatus = getSession().createNativeQuery(queryString.toString())
+					final List<Object[]> instrumentStatus = getSession().createSQLQuery(queryString.toString())
 							.setParameter("voucherheaderid", chqAssgn.getVoucherid())
-							.setParameter("payTo", chqAssgn.getPaidTo()).list();
+							.setString("payTo", chqAssgn.getPaidTo()).list();
 					if (instrumentStatus == null || instrumentStatus.size() == 0
 							|| !instrumentStatus.get(0)[1].toString().equalsIgnoreCase(instrumentNewStatus)
 									&& !instrumentStatus.get(0)[1].toString()
@@ -1015,10 +1016,10 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 							LOGGER.debug(
 									"ASSIGNED BUT SURRENDARD: detailTypeKeyAmtList  again checking " + queryString2);
 						final List<Object[]> instrumentStatusWithsubledgerPaidto = getSession()
-								.createNativeQuery(queryString2.toString())
+								.createSQLQuery(queryString2.toString())
 								.setParameter("voucherheaderid",
 										chqAssgn.getVoucherid())
-								.setParameter("payTo",
+								.setString("payTo",
 										getEntity(Integer.parseInt(detailTypeKeyAmtList.get(0)[0].toString()),
 												(Serializable) detailTypeKeyAmtList.get(0)[1]).getName())
 								.list();
@@ -1046,7 +1047,7 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 								.append(" order by id desc ");
 						if (LOGGER.isDebugEnabled())
 							LOGGER.debug("ASSIGNED BUT SURRENDARD: detailTypeKeyAmtList  checking " + queryString);
-						final List<Object[]> instrumentStatus = getSession().createNativeQuery(queryString.toString())
+						final List<Object[]> instrumentStatus = getSession().createSQLQuery(queryString.toString())
 								.setParameter("voucherheaderid", chqAssgn.getVoucherid())
 								.setParameter("detailtypeid", obj[0]).setParameter("detailkeyid", obj[1]).list();
 						if (instrumentStatus == null || instrumentStatus.size() == 0
@@ -1317,7 +1318,7 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 			LOGGER.debug("Starting getSubledgerAmtForDeduction...");
 		final Map<String, BigDecimal> map = new HashMap<String, BigDecimal>();
 		final Query query = getSession()
-				.createNativeQuery(new StringBuilder("SELECT gld.detailtypeid, gld.detailkeyid, SUM(gld.amount)")
+				.createSQLQuery(new StringBuilder("SELECT gld.detailtypeid, gld.detailkeyid, SUM(gld.amount)")
 						.append(" FROM generalledgerdetail gld, generalledger gl")
 						.append(" WHERE gl.voucherheaderid = :voucherheaderid")
 						.append(" AND gl.id =gld.generalledgerid AND gl.creditamount  >0")
@@ -1431,6 +1432,6 @@ public class ChequeAssignmentService extends PersistenceService<Paymentheader, L
 	}
 
 	private Long getLongValue(final Object object) {
-		return object != null ? Long.valueOf(object.toString()) : 0;
+		return object != null ? new Long(object.toString()) : 0;
 	}
 }
