@@ -1,8 +1,10 @@
 package org.upyog.sv.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.egov.common.contract.request.RequestInfo;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.upyog.sv.constants.StreetVendingConstants;
 import org.upyog.sv.util.EncryptionDecryptionUtil;
@@ -17,11 +19,8 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class StreetVendingEncryptionService {
 
-	private final EncryptionDecryptionUtil encryptionDecryptionUtil;
-
-	public StreetVendingEncryptionService(EncryptionDecryptionUtil encryptionDecryptionUtil) {
-		this.encryptionDecryptionUtil = encryptionDecryptionUtil;
-	}
+	@Autowired
+	private EncryptionDecryptionUtil encryptionDecryptionUtil;
 
 	public StreetVendingDetail encryptObject(StreetVendingRequest streetVendingRequest) {
 		List<VendorDetail> vendorDetails = streetVendingRequest.getStreetVendingDetail().getVendorDetail();
@@ -37,7 +36,7 @@ public class StreetVendingEncryptionService {
 		List<VendorDetail> encryptedVendorDetails = vendorDetails.stream()
 				.map(vendorDetail -> encryptionDecryptionUtil.encryptObject(vendorDetail,
 						StreetVendingConstants.SV_APPLICANT_DETAIL_ENCRYPTION_KEY, VendorDetail.class))
-				.toList();
+				.collect(Collectors.toList());
 		if (bankDetail != null) {
 			BankDetail encryptedBankDetail = encryptionDecryptionUtil.encryptObject(bankDetail,
 					StreetVendingConstants.SV_APPLICANT_DETAIL_ENCRYPTION_KEY, BankDetail.class);
